--- a/src/html/pages/overview.html
+++ b/src/html/pages/overview.html
@@ -8,7 +8,9 @@
     </head>
 
     <body>
+        <placeholder id="nav-main-menu"></placeholder>
         
+        <div id="main-content"></div>
 
         <script src="/js/libs.js"></script>
         <script src="/js/app.js"></script>
